Un-abstract renderClient() middleware

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,6 +16,7 @@
   <body>
     <div id="root"></div>
     <!-- CONFIGURATION -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
