--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <div id="root"></div>
-    <!-- CONFIGURATION -->
+    <!-- CONFIG -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="./app.js"></script>
   </body>
