--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
-    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./app.css">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
