Add simple streaming SSR example

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="./client.css">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
     <title>Eater of Hope</title>
@@ -17,6 +17,6 @@
     <div id="root"><!-- ROOT --></div>
     <!-- CONFIG -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="./client.js"></script>
   </body>
 </html>
