Remove last piece of SSR code

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div id="root"><!-- ROOT --></div>
+    <div id="root"></div>
     <!-- CONFIG -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="./client.js"></script>
