--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,15 +7,15 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="./client.css">
+    <link rel="stylesheet" href="./app.css">
 
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- CONFIG -->
+    <!-- INITIAL STATE -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="./client.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
