--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Eater of Hope</title>
 
@@ -14,8 +15,9 @@
 
   <body>
     <div id="root"></div>
+
     <!-- INITIAL STATE -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="./index.js"></script>
+    <script async src="./index.js"></script>
   </body>
 </html>
